--- a/config/config.ini
+++ b/config/config.ini
@@ -1,17 +1,4 @@
-title=Game Example
+title=Antiyoy
 
-# Uncomment the lines below and comment the lines under them to create a Solo Game
-# min_players=1
-# max_players=1
-
-# Uncomment this line for a regular Solo Game..
-# type=solo
-
-# ..or these lines for an Optimization Game
-# type=opti
-# criteria=points
-# sorting_order=asc
-
-type=multi
 min_players=2
 max_players=2
