Add EndScreenModule and fix ranks

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
 
         <dependency>
             <groupId>com.codingame.gameengine</groupId>
+            <artifactId>module-endscreen</artifactId>
+            <version>${gamengine.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.codingame.gameengine</groupId>
             <artifactId>module-entities</artifactId>
             <version>${gamengine.version}</version>
         </dependency>
