tooltips architecture + for cells

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
             <version>${gamengine.version}</version>
         </dependency>
 
+	<dependency>
+		<groupId>com.codingame.gameengine</groupId>
+		<artifactId>module-tooltip</artifactId>
+		<version>${gamengine.version}</version>
+	</dependency>
+
         <dependency>
             <groupId>com.codingame.gameengine</groupId>
             <artifactId>module-entities</artifactId>
